fix: Ajusta erro no .css do App.jsx

--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --bg-dark: #1A2F3A;
@@ -18,7 +18,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.app{
+.app {
     margin: 0px;
     display: grid;
     grid-template-columns: var(--aside-width) 1fr;
@@ -28,22 +28,22 @@
     background-color: #F5F5F5;
 }
 
-.aside.logo{
+.aside.logo {
     grid-area: logo;
 }
 
-header.header{
+header.header {
     grid-area: header;
 }
 
-aside.menu-area{
+aside.menu-area {
     grid-area: menu;
 }
 
-main.content{
+main.content {
     grid-area: content;
 }
 
-footer.footer{
+footer.footer {
     grid-area: footer;
 }
