style: Ajusta posição e elementos do rodapé

--- a/frontend/src/components/templete/Footer.css
+++ b/frontend/src/components/templete/Footer.css
@@ -1,6 +1,6 @@
 footer.footer {
     display: flex;
-    align-items: center;
+    align-items: self-end;
     justify-content: flex-end;
-    padding: 0 25px;
+    padding: 25px;
 }
