--- a/frontend/src/components/templete/Logo.css
+++ b/frontend/src/components/templete/Logo.css
@@ -1,5 +1,4 @@
-aide.logo{
-    background-color: var(--bg-dark);
+aside.logo{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,5 +6,5 @@ aide.logo{
 
 aside.logo img{
     padding: 0px 15px;
-    width: 100%;
+    width: 50%;
 }
