feat: Ajusta elementos

--- a/frontend/src/components/templete/Footer.css
+++ b/frontend/src/components/templete/Footer.css
@@ -1,6 +1,6 @@
 footer.footer {
     display: flex;
-    align-items: self-end;
+    align-items: flex-end;
     justify-content: flex-end;
     padding: 25px;
 }
