--- a/frontend/src/components/templete/Nav.css
+++ b/frontend/src/components/templete/Nav.css
@@ -1,3 +1,7 @@
+
+aside{
+    background-color: var(--bg-dark);
+}
 .menu a {
     display: block;
     text-decoration: none;
@@ -7,5 +11,5 @@
 }
 
 .menu a:hover {
-    background: #F2EEEB;
+    background: #F2F2F2;
 }
