--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --bg-dark: #07060D;
+    --bg-dark: ##186B8C;
 
     --logo-height: 100px;
     --header-height: 100px;
@@ -29,7 +29,7 @@
         "menu content" 
         "menu footer"; 
     height: 100vh;
-    background-color: #F2E7C4;
+    background-color: #F2F2F2;
 }
 
 .aside.logo {
