--- a/frontend/src/components/templete/Header.css
+++ b/frontend/src/components/templete/Header.css
@@ -2,6 +2,7 @@ header.header {
     padding: 0px 15px;
     overflow: hidden;
     white-space: nowrap;
+    box-shadow: var(--shadow);
 }
 
 header.header h1 {
