--- a/frontend/src/components/templete/Nav.css
+++ b/frontend/src/components/templete/Nav.css
@@ -1,6 +1,7 @@
 
 aside{
     background-color: var(--bg-dark);
+    box-shadow: var(--shadow);
 }
 .menu a {
     display: block;
@@ -12,4 +13,5 @@ aside{
 
 .menu a:hover {
     background: #F2F2F2;
+    color: black;
 }
