--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --bg-dark: ##186B8C;
+    --bg-dark: #186B8C;
 
     --logo-height: 100px;
     --header-height: 100px;
