style: Ajusta responsividade

--- a/frontend/src/components/templete/Footer.css
+++ b/frontend/src/components/templete/Footer.css
@@ -5,3 +5,9 @@ footer.footer {
     padding: 25px;
     box-shadow: var(--shadow);
 }
+
+@media(max-width: 576px){
+    aside.logo img {
+        width: 350px;
+    }
+}
