--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -5,6 +5,7 @@
 
     --logo-height: 100px;
     --header-height: 100px;
+    --menu-top-height: 80px;
     --aside-width: 225px;
     --footer-height: 40px;
 
@@ -23,18 +24,18 @@
     margin: 0px;
     display: grid;
     grid-template-columns: var(--aside-width) 1fr;
-    grid-template-rows: var(--logo-height) var(--header-height) 1fr ;
-    grid-template-areas: 
-        "logo header" 
-        "menu content" 
-        "menu footer"; 
+    grid-template-rows: var(--logo-height) var(--header-height) 1fr;
+    grid-template-areas:
+        "logo header"
+        "menu content"
+        "menu footer";
     height: 100vh;
     background-color: #F2F2F2;
 }
 
 .aside.logo {
     grid-area: logo;
-    max-height: var(--logo-height); 
+    max-height: var(--logo-height);
 }
 
 header.header {
@@ -52,4 +53,24 @@ main.content {
 
 footer.footer {
     grid-area: footer;
+}
+
+@media(max-width: 768px) {
+    .app {
+        grid-template-rows: var(--header-height) var(--menu-top-height) 1fr var(--footer-height);
+        grid-template-columns: var(--aside-width) 1fr;
+        grid-template-areas:
+            "logo header"
+            "menu menu"
+            "content content"
+            "footer footer";
+    }
+}
+
+@media(max-width: 576px){
+    .app {
+        grid-template-rows: var(--logo-height) var(--menu-top-height) 1fr var(--footer-height);
+        grid-template-columns: 1fr;
+        grid-template-areas: "logo" "menu" "content" "footer";
+    }
 }
