--- a/tic_em_trilhas-to+do/src/components/Cabecalho/Cabecalho.module.css
+++ b/tic_em_trilhas-to+do/src/components/Cabecalho/Cabecalho.module.css
@@ -1,7 +1,20 @@
 .Cabecalho {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: var(--preto);
     color: var(--cinza);
     padding: 0.25rem 0.5rem;
+}
+
+.Cabecalho a {
+    text-decoration: none;
+    color: var(--cinza);
+    font-weight: bold;
+}
+
+.Cabecalho a:hover {
+    color: var(--rosa);
 }
 
 .Cabecalho h1 {
