feat: Configura rota padrão de erro e ajusta css da página de rotas

--- a/tic_em_trilhas-to+do/src/pages/NotFound/NotFound.module.css
+++ b/tic_em_trilhas-to+do/src/pages/NotFound/NotFound.module.css
@@ -1,8 +1,5 @@
 .NotFound{
     display: flex;
     justify-content: center;
-}
-
-.NotFound h1 {
-    color: var(--cinza);
+    text-align: center;
 }
